# Qbot

./: README.md  chatbot.py  main.py  pyproject.toml
config/: config.json
conversation_history/: conversation_history.json
functions/: chatbot.py  hitokoto.py  hitokoto_history.json  napcat_scheduler.py  schedule.json
